Update Introduction page

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,17 +1,38 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Welcome to the LEXI AI Documentation"
 
 ---
+This Documentation will help you to get better understand about LEXI and how to use it. It will also help you to get started with the product and how to use it.
 
+## Get started with LEXI
 
-In the rapidly evolving digital landscape, customer service systems have increasingly adopted AI-driven solutions to streamline support processes and enhance user satisfaction. One such innovation is the **AI Customer Assistant Chatbot with Integrated Ticketing System**, a project that aims to bridge the gap between automated assistance and human support. 
+<CardGroup cols={2}>
+  <Card title="Chatbot" icon="robot">
+    Get started with the LEXI Chatbot
+  </Card>
+  <Card title="Ticket Form" icon="square-kanban">
+    Get started with the LEXI Ticket Form
+  </Card>
+  <Card title="Email" icon="envelope">
+    Get started with the LEXI Email
+  </Card>
+  <Card title="Integrations" icon="plug">
+    Get started with the LEXI Integrations
+  </Card>
+  <Card title="APIs" icon="code">
+    Get started with the LEXI APIs
+  </Card>
+  <Card title="Theme" icon="palette">
+    Get started with the LEXI Elements
+  </Card>
+</CardGroup>
 
-Traditional chatbots often fall short when handling complex queries, resulting in user frustration and repetitive issue reporting. To address this, the proposed system introduces a **hybrid support model**. It combines real-time, AI-powered conversation handling with a robust ticketing mechanism that escalates unresolved issues to human agents. This ensures continuity in service by preserving the context and chat history, allowing agents to seamlessly take over from the chatbot without requiring customers to repeat themselves.
+<Accordion title="Who AM I?">
+  The AI Customer Assistant Chatbot with Integrated Ticketing System is a hybrid support platform that combines automated assistance with human support to deliver a seamless customer service experience. The system is designed to handle a wide range of customer queries in real-time using artificial intelligence and natural language processing.
+  It can provide instant responses to frequently asked questions, guide users through troubleshooting steps, and escalate complex issues to human agents when necessary. The integrated ticketing system allows for efficient tracking and management of customer inquiries, ensuring that no request goes unanswered. This solution is ideal for businesses looking to enhance their customer support capabilities while reducing response times and improving overall satisfaction.
 
-The core objective of this project is to **improve the efficiency and user experience of customer service platforms** by leveraging Natural Language Processing (NLP), machine learning for self-improvement, and intelligent ticket tracking. Furthermore, the chatbot is designed to continuously learn from previous interactions, enabling it to evolve over time and handle increasingly complex queries.
-
-This document provides an overview of the problem this project addresses, the design and technical implementation of the chatbot system, and a critical evaluation of its effectiveness. The subsequent chapters include a literature and technology review, a detailed methodology, system requirements, design, implementation, and evaluation, culminating in reflections and conclusions.
+</Accordion>
 
 
 {/* 
