fetch:update knowledge base

--- a/addknowledge.mdx
+++ b/addknowledge.mdx
@@ -13,3 +13,71 @@ You can add your custom knowledge to the chatbot for more personalized and accur
 </Frame>
 
 - You can add your knowledge files by clicking the **Add a new knowledge**.
+
+<Frame>
+  <img src="images/Knowladge_Empty.jpg" />
+</Frame>
+
+- Choose your Knowledge source type from the dropdown list. You can choose from the following options:
+
+  - **Website**: You can share the link to your website or guide page. LEXI AI will extract the information from the web link provided and train the chatbot for future use..
+  - **Document**: You can upload documents in any format. LEXI AI will extract text from them and add them to its knowledge base..
+
+<Frame>
+  <img src="images/Knowledge add.jpeg" />
+</Frame>
+
+- Add the knowledge; here, we are choosing PDF files as the knowledge type.
+<Frame>
+  <img src="images/Knowladge_Table.jpg" />
+</Frame>
+
+- Once you have added the document or website , go to the left side of the screen and train the AI Model.
+
+<Frame>
+  <img src="images/Knowladge_Information.jpg" />
+</Frame>
+
+- Click on the **Train** button to train the AI model with the new knowledge. This will take a few minutes, depending on the size of the document or website.
+<Frame>
+  <img src="images/Screenshot 2025-04-22 at 15.05.19.png" />
+</Frame>
+
+## Adding FAQs
+
+People usually come up with frequently asked questions, so why not add FAQs directly on your chatbot beforehand?
+
+<Note>An FAQ is a special kind of knowledge.
+It is a collection of questions and answers and it is the most "direct" form of knowledge that you can provide to the AI. When an FAQ is find as a potential answer to a user's question, this knowledge is prioritized over other sources.</Note>
+
+Let's see how you can add FAQs to your chatbot:
+
+- On your LEXI Home screen, Navigate to  **FAQs** under the **Knowledge Base** section.
+
+<Frame>
+  <img src="images/Knowladge_empt.jpg" />
+</Frame>
+
+- Click on Create a new FAQ
+<Frame>
+  <img src="images/FAQs_Empty.jpg" />
+</Frame>
+
+- You can create the category name based on your needs.
+<Frame>
+  <img src="images/FAQs_Create New Categorie.jpg" />
+</Frame>
+
+- Example of FAQs category name:
+<Frame>
+  <img src="images/FAQs_Categories_Edit.jpg" />
+</Frame>
+
+- Once you have added all your Q&As, training the chatbot is time.
+- Return to the FAQ page and click Train AI model to train the chatbot under the Training tab.
+
+<Frame>
+  <img src="images/FAQs_Categories.jpg" />
+</Frame>
+
+<Check>That's it! You have now successfully added and trained your knowledge sources and FAQs 🥳</Check>
