--- a/chatbot_getstart.mdx
+++ b/chatbot_getstart.mdx
@@ -1,5 +1,63 @@
 ---
 title: "Get Started"
 sidebarTitle: "Get Start"
-description: "Just start with the Chatbot"
+description: "Welcome to the smoothest AI Support for your SaaS startup. Let’s cover all the things you need to know to set up your first AI Chatbot and how you can configure it as per your startup requirement."
 ---
+
+## Create an AI chatbot
+
+Creating your first AI Chatbot is easy. Here are the baby steps you need to follow.
+
+- Navigate to chatbots on your Dashboard Screen.
+
+<Frame>
+  <img src="images/Chatbot.jpg" />
+</Frame>
+
+- Click on Create a new chatbot.
+
+
+<Frame>
+  <img src="images/Chatbot_1.jpg" />
+</Frame>
+
+- Sample Chatbots 
+
+<Frame>
+  <img src="images/Chatbot_2.jpg" />
+</Frame>
+
+## Appearance and basic settings
+
+- You can always change the way your chatbot looks and behaves.
+- You can view your chatbot's appearance options and basic settings under the Chatbot tab.
+- Appearance & Basic Settings has options like Headline, Description, Welcome message, and Brand color to edit
+
+<Frame>
+  <img src="images/Screenshot 2025-04-22 at 15.50.32.png" />
+</Frame>
+
+## Adding Knowledge to your chatbot
+
+By default, a newly created chatbot does not have any knowledge.
+So in order to make your chatbot smart, we need to teach it first.
+
+Start by adding the knowledge sources you need.
+You can use a website, YouTube video, documents, or custom FAQs as knowledge sources.
+
+Once you have added and trained your knowledge, you can add it to your chatbot:
+- Select the chatbot to which you want to add knowledge.
+- Go to the chatbot configuration page by clicking on the chatbot name.
+
+<Frame>
+  <img src="images/Add_Knowledge.jpg" />
+</Frame>
+
+- A pop-up will appear showing all the knowledge base you have created so far from which to choose.
+- Select the knowledge you want to add for this particular chatbot and click on add knowledge.
+
+<Frame>
+  <img src="images/Knowledge.jpg" />
+</Frame>
+
+<Check>Woah! You just added a knowledge source to your chatbot 🥳</Check>
