--- a/connect_ticket.mdx
+++ b/connect_ticket.mdx
@@ -1,5 +1,43 @@
 ---
 title: "Get Started"
 sidebarTitle: "Connect a ticket form"
-description: "Just start with the Chatbot"
 ---
+
+## Create a New Ticket Form
+
+To connect a ticket form with your AI Chatbot, you first need to create one
+
+- Navigate to Ticket Forms for your Home screen.
+
+<Frame>
+  <img src="images/Home_1.jpg" />
+</Frame>
+
+- Click on Create New Ticket Form.
+
+<Frame>
+  <img src="images/Ticket Form.jpg" />
+</Frame>
+
+- A new Untitled Ticket form will be created. Click on it to be directed to the configuration page of the selected ticket form.
+- Use this page to configure your Ticket form. Options such as the Ticket form name, Headline, Descriptions, Button, and many more are available.
+- Once you are done configuring the custom ticket form, it will be automatically saved.
+
+<Frame>
+  <img src="images/Interface.jpg" />
+</Frame>
+
+## How to Connect Ticket Form to Chatbot
+- Select the chatbot to which you want to add a Ticket form connection.
+- On the configuration page of the chatbot, head over to the Connections tab.
+- Click on Add Ticket Form under the Connections Tab.
+
+<Frame>
+  <img src="images/Add_Knowled.jpg" />
+</Frame>
+
+<Frame>
+  <img src="images/Knowledge_1.jpg" />
+</Frame>
+
+<Check>Congrats! Your newly created Ticket Form is connected to the chatbot. 🥳</Check>
